AsyncAPI | Add EventStoreRestController
