# packages/api/rest-api-docs.yaml
@@ -23,6 +23,8 @@ tags:
     externalDocs:
       description: Find out more
       url: https://www.process.st/webhooks/
+  - name: Event Store
+    description: Events stored as effect of domain operations.
 servers:
   - url: /api
     description: REST API v1
@@ -212,6 +214,23 @@ paths:
           description: 'Process.st event was processed'
       tags:
         - Process.st
+  /event-store/events/:
+    get:
+      summary: Application events
+      description: Try to subscribe for new events by changing media type to `text/event-stream`
+      operationId: EventStore_getEvents
+      responses:
+        200:
+          description: 'List of events'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/GetEventStoreEventsResponseBody'
+            text/event-stream:
+              schema:
+                $ref: '#/components/schemas/GetEventStoreEventsStream'
+      tags:
+        - Event Store
 components:
   schemas:
     UserRegistrationPostRequestBody:
@@ -443,6 +462,61 @@ components:
           example: Bad Request
       required:
         - message
+    ApplicationEventDto:
+      type: object
+      properties:
+        type:
+          type: string
+        id:
+          type: string
+        occurredAt:
+          type: string
+          format: date-time
+        streamVersion:
+          type: number
+        streamName:
+          type: string
+        globalOrder:
+          type: number
+        metadata:
+          type: object
+          properties:
+            correlationId:
+              type: string
+            causationId:
+              type: string
+          required:
+            - correlationId
+        data:
+          type: object
+      required:
+        - type
+        - id
+        - occurredAt
+        - streamVersion
+        - streamName
+        - globalOrder
+    GetEventStoreEventsResponseBody:
+      type: object
+      properties:
+        items:
+          type: array
+          items:
+            $ref: '#/components/schemas/ApplicationEventDto'
+        metadata:
+          type: object
+          properties:
+            size:
+              type: number
+          required:
+            - size
+      required:
+        - items
+        - metadata
+    GetEventStoreEventsStream:
+      type: array
+      items:
+        $ref: '#/components/schemas/ApplicationEventDto'
   responses:
     BadRequest:
       description: Incorrect request body
